maybe this will fix the animation not working on mobile

--- a/client/src/pages/css/Code.css
+++ b/client/src/pages/css/Code.css
@@ -17,7 +17,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .CodeBody {
+    .CodeBodyHeader {
       font-size: 1em;
     }
 }
@@ -39,4 +39,11 @@
 .ProjectsSection {
     padding: 0;
     font-size: clamp(0.3rem, 2vw, 1.5rem);
+    padding-left: 3%;
+}
+
+@media only screen and (max-width: 600px) {
+    .ProjectsSection {
+      font-size: 1em;
+    }
 }
